[project]
name = "poi-converter"
version = "0.1.0"
description = "Convert CSV data from Google Sheets to GeoJSON and FlatGeobuf formats"
requires-python = ">=3.8"
dependencies = [
    "geopandas>=0.13.0",
    "fiona>=1.8.0",
    "pyogrio>=0.5.0",
    "aiohttp>=3.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
